c/src/test/resources/c/mini_bnc/valid/arrayInStruct2.ctrl
<controlFile>
  <sourceFile name="arrayInStruct2.c" id="1" />
  <run>
    <startPosition fileId="1" line="12" />
    <endPosition fileId="1" line="18" />
  </run>
</controlFile>