c/src/test/resources/c/mini_bnc/invalid/allocatedMergeSimp.ctrl
<controlFile>
  <sourceFile name="allocatedMergeSimp.c" id="1" />
  <run>
    <startPosition fileId="1" line="6" />
    <endPosition fileId="1" line="18" />
  </run>
</controlFile>